trunk/ABACUS/SRC/verilog_bison.output
Terminals which are not used

   vNO_ID
   vDEFPARAM
   vNOT_SUPPORT


State 234 conflicts: 1 shift/reduce


Grammar

    0 $accept: source_text $end

    1 source_text: items

    2 items: items module
    3      | items define
    4      | module
    5      | define

    6 define: vDEFINE vSYMBOL_ID vNUMBER_ID

    7 module: vMODULE vSYMBOL_ID '(' variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID '(' variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE vSYMBOL_ID '(' ')' ';' list_of_module_items vENDMODULE

   10 list_of_module_items: list_of_module_items module_item
   11                     | module_item

   12 module_item: parameter_declaration
   13            | input_declaration
   14            | output_declaration
   15            | inout_declaration
   16            | net_declaration
   17            | continuous_assign
   18            | gate_declaration
   19            | module_instantiation
   20            | always
   21            | gen_block

   22 parameter_declaration: vPARAMETER variable_list ';'

   23 input_declaration: vINPUT variable_list ';'
   24                  | vINPUT_SIGNED variable_list ';'

   25 output_declaration: vOUTPUT variable_list ';'
   26                   | vOUTPUT_REG variable_list ';'

   27 inout_declaration: vINOUT variable_list ';'

   28 net_declaration: vWIRE variable_list ';'
   29                | vREG variable_list ';'
   30                | vINTEGER variable_list ';'
   31                | vGENVAR variable_list ';'
   32                | vREG_SIGNED variable_list ';'
   33                | vWIRE_SIGNED variable_list ';'

   34 variable_list: variable_list ',' variable
   35              | variable

   36 variable: vSYMBOL_ID
   37         | '[' expression ':' expression ']' vSYMBOL_ID
   38         | '[' expression ':' expression ']' vSYMBOL_ID '[' expression ':' expression ']'
   39         | '[' expression ':' expression ']' vSYMBOL_ID '[' expression ':' expression ']' '[' expression ':' expression ']'
   40         | '[' expression ':' expression ']' vSYMBOL_ID '=' primary
   41         | vSYMBOL_ID '=' primary

   42 continuous_assign: vASSIGN blocking_assignment ';'

   43 gate_declaration: vAND gate_instance ';'
   44                 | vNAND gate_instance ';'
   45                 | vNOR gate_instance ';'
   46                 | vNOT gate_instance ';'
   47                 | vOR gate_instance ';'
   48                 | vXNOR gate_instance ';'
   49                 | vXOR gate_instance ';'

   50 gate_instance: vSYMBOL_ID '(' expression ',' expression ',' expression ')'
   51              | '(' expression ',' expression ',' expression ')'
   52              | vSYMBOL_ID '(' expression ',' expression ')'
   53              | '(' expression ',' expression ')'

   54 module_instantiation: vSYMBOL_ID module_instance

   55 module_instance: vSYMBOL_ID '(' list_of_module_connections ')' ';'
   56                | '#' '(' list_of_module_parameters ')' vSYMBOL_ID '(' list_of_module_connections ')' ';'
   57                | vSYMBOL_ID '(' ')' ';'
   58                | '#' '(' list_of_module_parameters ')' vSYMBOL_ID '(' ')' ';'

   59 list_of_module_connections: list_of_module_connections ',' module_connection
   60                           | module_connection

   61 module_connection: '.' vSYMBOL_ID '(' expression ')'
   62                  | expression

   63 list_of_module_parameters: list_of_module_parameters ',' module_parameter
   64                          | module_parameter

   65 module_parameter: '.' vSYMBOL_ID '(' expression ')'
   66                 | expression

   67 always: vALWAYS delay_control statement

   68 gen_block: vGENERATE stmt_list vENDGENERATE

   69 statement: seq_block
   70          | blocking_assignment ';'
   71          | non_blocking_assignment ';'
   72          | vIF '(' expression ')' statement
   73          | vIF '(' expression ')' statement vELSE statement
   74          | vCASE '(' expression ')' case_item_list vENDCASE
   75          | vFOR '(' blocking_assignment ';' expression ';' blocking_assignment ')' statement
   76          | ';'

   77 blocking_assignment: primary '=' expression
   78                    | primary '=' vDELAY_ID expression

   79 non_blocking_assignment: primary voLTE expression
   80                        | primary voLTE vSIGNED expression
   81                        | primary voLTE vDELAY_ID expression
   82                        | primary voLTE vDELAY_ID vSIGNED expression

   83 case_item_list: case_item_list case_items
   84               | case_items

   85 case_items: expression ':' statement
   86           | vDEFAULT ':' statement

   87 seq_block: vBEGIN stmt_list vEND
   88          | vGENERATE stmt_list vENDGENERATE

   89 stmt_list: stmt_list statement
   90          | statement

   91 delay_control: '@' '(' event_expression_list ')'
   92              | '@' '(' '*' ')'
   93              | '@' '*'

   94 event_expression_list: event_expression_list vOR event_expression
   95                      | event_expression_list ',' event_expression
   96                      | event_expression

   97 event_expression: primary
   98                 | vPOSEDGE vSYMBOL_ID
   99                 | vNEGEDGE vSYMBOL_ID

  100 expression: primary
  101           | '+' expression
  102           | '-' expression
  103           | '~' expression
  104           | '&' expression
  105           | '|' expression
  106           | voNAND expression
  107           | voNOR expression
  108           | voXNOR expression
  109           | '!' expression
  110           | '^' expression
  111           | expression '^' expression
  112           | expression '*' expression
  113           | expression '/' expression
  114           | expression '%' expression
  115           | expression '+' expression
  116           | expression '-' expression
  117           | expression '&' expression
  118           | expression '|' expression
  119           | expression voNAND expression
  120           | expression voNOR expression
  121           | expression voXNOR expression
  122           | expression '<' expression
  123           | expression '>' expression
  124           | expression voSRIGHT expression
  125           | expression voSLEFT expression
  126           | expression voEQUAL expression
  127           | expression voNOTEQUAL expression
  128           | expression voLTE expression
  129           | expression voGTE expression
  130           | expression voCASEEQUAL expression
  131           | expression voCASENOTEQUAL expression
  132           | expression voOROR expression
  133           | expression voANDAND expression
  134           | expression '?' expression ':' expression
  135           | '(' expression ')'
  136           | '{' expression '{' expression '}' '}'
  137           | '{' expression '{' expression_list '}' '}'

  138 primary: vNUMBER_ID
  139        | vSYMBOL_ID
  140        | vSYMBOL_ID '[' expression ']'
  141        | vSYMBOL_ID '[' expression ']' '[' expression ']'
  142        | vSYMBOL_ID '[' expression ':' expression ']'
  143        | vSYMBOL_ID '[' expression ']' '[' expression ':' expression ']'
  144        | vSYMBOL_ID '[' expression ']' '[' expression ']' '[' expression ':' expression ']'
  145        | '{' expression_list '}'

  146 expression_list: expression_list ',' expression
  147                | expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 109
'#' (35) 56 58
'%' (37) 114
'&' (38) 104 117
'(' (40) 7 8 9 50 51 52 53 55 56 57 58 61 65 72 73 74 75 91 92 135
')' (41) 7 8 9 50 51 52 53 55 56 57 58 61 65 72 73 74 75 91 92 135
'*' (42) 92 93 112
'+' (43) 101 115
',' (44) 8 34 50 51 52 53 59 63 95 146
'-' (45) 102 116
'.' (46) 61 65
'/' (47) 113
':' (58) 37 38 39 40 85 86 134 142 143 144
';' (59) 7 8 9 22 23 24 25 26 27 28 29 30 31 32 33 42 43 44 45 46 47
    48 49 55 56 57 58 70 71 75 76
'<' (60) 122
'=' (61) 40 41 77 78
'>' (62) 123
'?' (63) 134
'@' (64) 91 92 93
'[' (91) 37 38 39 40 140 141 142 143 144
']' (93) 37 38 39 40 140 141 142 143 144
'^' (94) 110 111
'{' (123) 136 137 145
'|' (124) 105 118
'}' (125) 136 137 145
'~' (126) 103
error (256)
vSYMBOL_ID (258) 6 7 8 9 36 37 38 39 40 41 50 52 54 55 56 57 58 61
    65 98 99 139 140 141 142 143 144
vNUMBER_ID (259) 6 138
vDELAY_ID (260) 78 81 82
vALWAYS (261) 67
vAND (262) 43
vASSIGN (263) 42
vGENERATE (264) 68 88
vBEGIN (265) 87
vCASE (266) 74
vDEFAULT (267) 86
vDEFINE (268) 6
vELSE (269) 73
vEND (270) 87
vENDCASE (271) 74
vENDGENERATE (272) 68 88
vENDMODULE (273) 7 8 9
vIF (274) 72 73
vFOR (275) 75
vINOUT (276) 27
vINPUT (277) 23
vINPUT_SIGNED (278) 24
vMODULE (279) 7 8 9
vNAND (280) 44
vNEGEDGE (281) 99
vNOR (282) 45
vNOT (283) 46
vOR (284) 47 94
vNO_ID (285)
vSIGNED (286) 80 82
vOUTPUT (287) 25
vPARAMETER (288) 22
vPOSEDGE (289) 98
vREG (290) 29
vOUTPUT_REG (291) 26
vWIRE (292) 28
vINTEGER (293) 30
vGENVAR (294) 31
vREG_SIGNED (295) 32
vWIRE_SIGNED (296) 33
vXNOR (297) 48
vXOR (298) 49
vDEFPARAM (299)
voANDAND (300) 133
voOROR (301) 132
voLTE (302) 79 80 81 82 128
voGTE (303) 129
voSLEFT (304) 125
voSRIGHT (305) 124
voEQUAL (306) 126
voNOTEQUAL (307) 127
voCASEEQUAL (308) 130
voCASENOTEQUAL (309) 131
voXNOR (310) 108 121
voNAND (311) 106 119
voNOR (312) 107 120
vNOT_SUPPORT (313)
UOR (314)
UAND (315)
UNOT (316)
UNAND (317)
UNOR (318)
UXNOR (319)
UXOR (320)
ULNOT (321)
UADD (322)
UMINUS (323)
LOWER_THAN_ELSE (324)


Nonterminals, with rules where they appear

$accept (96)
    on left: 0
source_text (97)
    on left: 1, on right: 0
items (98)
    on left: 2 3 4 5, on right: 1 2 3
define (99)
    on left: 6, on right: 3 5
module (100)
    on left: 7 8 9, on right: 2 4
list_of_module_items (101)
    on left: 10 11, on right: 7 8 9 10
module_item (102)
    on left: 12 13 14 15 16 17 18 19 20 21, on right: 10 11
parameter_declaration (103)
    on left: 22, on right: 12
input_declaration (104)
    on left: 23 24, on right: 13
output_declaration (105)
    on left: 25 26, on right: 14
inout_declaration (106)
    on left: 27, on right: 15
net_declaration (107)
    on left: 28 29 30 31 32 33, on right: 16
variable_list (108)
    on left: 34 35, on right: 7 8 22 23 24 25 26 27 28 29 30 31 32
    33 34
variable (109)
    on left: 36 37 38 39 40 41, on right: 34 35
continuous_assign (110)
    on left: 42, on right: 17
gate_declaration (111)
    on left: 43 44 45 46 47 48 49, on right: 18
gate_instance (112)
    on left: 50 51 52 53, on right: 43 44 45 46 47 48 49
module_instantiation (113)
    on left: 54, on right: 19
module_instance (114)
    on left: 55 56 57 58, on right: 54
list_of_module_connections (115)
    on left: 59 60, on right: 55 56 59
module_connection (116)
    on left: 61 62, on right: 59 60
list_of_module_parameters (117)
    on left: 63 64, on right: 56 58 63
module_parameter (118)
    on left: 65 66, on right: 63 64
always (119)
    on left: 67, on right: 20
gen_block (120)
    on left: 68, on right: 21
statement (121)
    on left: 69 70 71 72 73 74 75 76, on right: 67 72 73 75 85 86 89
    90
blocking_assignment (122)
    on left: 77 78, on right: 42 70 75
non_blocking_assignment (123)
    on left: 79 80 81 82, on right: 71
case_item_list (124)
    on left: 83 84, on right: 74 83
case_items (125)
    on left: 85 86, on right: 83 84
seq_block (126)
    on left: 87 88, on right: 69
stmt_list (127)
    on left: 89 90, on right: 68 87 88 89
delay_control (128)
    on left: 91 92 93, on right: 67
event_expression_list (129)
    on left: 94 95 96, on right: 91 94 95
event_expression (130)
    on left: 97 98 99, on right: 94 95 96
expression (131)
    on left: 100 101 102 103 104 105 106 107 108 109 110 111 112 113
    114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129
    130 131 132 133 134 135 136 137, on right: 37 38 39 40 50 51 52
    53 61 62 65 66 72 73 74 75 77 78 79 80 81 82 85 101 102 103 104
    105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120
    121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136
    137 140 141 142 143 144 146 147
primary (132)
    on left: 138 139 140 141 142 143 144 145, on right: 40 41 77 78
    79 80 81 82 97 100
expression_list (133)
    on left: 146 147, on right: 137 145 146


state 0

    0 $accept: . source_text $end

    vDEFINE  shift, and go to state 1
    vMODULE  shift, and go to state 2

    source_text  go to state 3
    items        go to state 4
    define       go to state 5
    module       go to state 6


state 1

    6 define: vDEFINE . vSYMBOL_ID vNUMBER_ID

    vSYMBOL_ID  shift, and go to state 7


state 2

    7 module: vMODULE . vSYMBOL_ID '(' variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE . vSYMBOL_ID '(' variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE . vSYMBOL_ID '(' ')' ';' list_of_module_items vENDMODULE

    vSYMBOL_ID  shift, and go to state 8


state 3

    0 $accept: source_text . $end

    $end  shift, and go to state 9


state 4

    1 source_text: items .
    2 items: items . module
    3      | items . define

    vDEFINE  shift, and go to state 1
    vMODULE  shift, and go to state 2

    $default  reduce using rule 1 (source_text)

    define  go to state 10
    module  go to state 11


state 5

    5 items: define .

    $default  reduce using rule 5 (items)


state 6

    4 items: module .

    $default  reduce using rule 4 (items)


state 7

    6 define: vDEFINE vSYMBOL_ID . vNUMBER_ID

    vNUMBER_ID  shift, and go to state 12


state 8

    7 module: vMODULE vSYMBOL_ID . '(' variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID . '(' variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE vSYMBOL_ID . '(' ')' ';' list_of_module_items vENDMODULE

    '('  shift, and go to state 13


state 9

    0 $accept: source_text $end .

    $default  accept


state 10

    3 items: items define .

    $default  reduce using rule 3 (items)


state 11

    2 items: items module .

    $default  reduce using rule 2 (items)


state 12

    6 define: vDEFINE vSYMBOL_ID vNUMBER_ID .

    $default  reduce using rule 6 (define)


state 13

    7 module: vMODULE vSYMBOL_ID '(' . variable_list ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID '(' . variable_list ',' ')' ';' list_of_module_items vENDMODULE
    9       | vMODULE vSYMBOL_ID '(' . ')' ';' list_of_module_items vENDMODULE

    vSYMBOL_ID  shift, and go to state 14
    ')'         shift, and go to state 15
    '['         shift, and go to state 16

    variable_list  go to state 17
    variable       go to state 18


state 14

   36 variable: vSYMBOL_ID .
   41         | vSYMBOL_ID . '=' primary

    '='  shift, and go to state 19

    $default  reduce using rule 36 (variable)


state 15

    9 module: vMODULE vSYMBOL_ID '(' ')' . ';' list_of_module_items vENDMODULE

    ';'  shift, and go to state 20


state 16

   37 variable: '[' . expression ':' expression ']' vSYMBOL_ID
   38         | '[' . expression ':' expression ']' vSYMBOL_ID '[' expression ':' expression ']'
   39         | '[' . expression ':' expression ']' vSYMBOL_ID '[' expression ':' expression ']' '[' expression ':' expression ']'
   40         | '[' . expression ':' expression ']' vSYMBOL_ID '=' primary

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 35
    primary     go to state 36


state 17

    7 module: vMODULE vSYMBOL_ID '(' variable_list . ')' ';' list_of_module_items vENDMODULE
    8       | vMODULE vSYMBOL_ID '(' variable_list . ',' ')' ';' list_of_module_items vENDMODULE
   34 variable_list: variable_list . ',' variable

    ')'  shift, and go to state 37
    ','  shift, and go to state 38


state 18

   35 variable_list: variable .

    $default  reduce using rule 35 (variable_list)


state 19

   41 variable: vSYMBOL_ID '=' . primary

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    '{'         shift, and go to state 39

    primary  go to state 40


state 20

    9 module: vMODULE vSYMBOL_ID '(' ')' ';' . list_of_module_items vENDMODULE

    vSYMBOL_ID     shift, and go to state 41
    vALWAYS        shift, and go to state 42
    vAND           shift, and go to state 43
    vASSIGN        shift, and go to state 44
    vGENERATE      shift, and go to state 45
    vINOUT         shift, and go to state 46
    vINPUT         shift, and go to state 47
    vINPUT_SIGNED  shift, and go to state 48
    vNAND          shift, and go to state 49
    vNOR           shift, and go to state 50
    vNOT           shift, and go to state 51
    vOR            shift, and go to state 52
    vOUTPUT        shift, and go to state 53
    vPARAMETER     shift, and go to state 54
    vREG           shift, and go to state 55
    vOUTPUT_REG    shift, and go to state 56
    vWIRE          shift, and go to state 57
    vINTEGER       shift, and go to state 58
    vGENVAR        shift, and go to state 59
    vREG_SIGNED    shift, and go to state 60
    vWIRE_SIGNED   shift, and go to state 61
    vXNOR          shift, and go to state 62
    vXOR           shift, and go to state 63

    list_of_module_items   go to state 64
    module_item            go to state 65
    parameter_declaration  go to state 66
    input_declaration      go to state 67
    output_declaration     go to state 68
    inout_declaration      go to state 69
    net_declaration        go to state 70
    continuous_assign      go to state 71
    gate_declaration       go to state 72
    module_instantiation   go to state 73
    always                 go to state 74
    gen_block              go to state 75


state 21

  139 primary: vSYMBOL_ID .
  140        | vSYMBOL_ID . '[' expression ']'
  141        | vSYMBOL_ID . '[' expression ']' '[' expression ']'
  142        | vSYMBOL_ID . '[' expression ':' expression ']'
  143        | vSYMBOL_ID . '[' expression ']' '[' expression ':' expression ']'
  144        | vSYMBOL_ID . '[' expression ']' '[' expression ']' '[' expression ':' expression ']'

    '['  shift, and go to state 76

    $default  reduce using rule 139 (primary)


state 22

  138 primary: vNUMBER_ID .

    $default  reduce using rule 138 (primary)


state 23

  108 expression: voXNOR . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 77
    primary     go to state 36


state 24

  106 expression: voNAND . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 78
    primary     go to state 36


state 25

  107 expression: voNOR . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 79
    primary     go to state 36


state 26

  105 expression: '|' . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 80
    primary     go to state 36


state 27

  110 expression: '^' . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 81
    primary     go to state 36


state 28

  104 expression: '&' . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 82
    primary     go to state 36


state 29

  101 expression: '+' . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 83
    primary     go to state 36


state 30

  102 expression: '-' . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 84
    primary     go to state 36


state 31

  135 expression: '(' . expression ')'

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 85
    primary     go to state 36


state 32

  136 expression: '{' . expression '{' expression '}' '}'
  137           | '{' . expression '{' expression_list '}' '}'
  145 primary: '{' . expression_list '}'

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression       go to state 86
    primary          go to state 36
    expression_list  go to state 87


state 33

  103 expression: '~' . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 88
    primary     go to state 36


state 34

  109 expression: '!' . expression

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression  go to state 89
    primary     go to state 36


state 35

   37 variable: '[' expression . ':' expression ']' vSYMBOL_ID
   38         | '[' expression . ':' expression ']' vSYMBOL_ID '[' expression ':' expression ']'
   39         | '[' expression . ':' expression ']' vSYMBOL_ID '[' expression ':' expression ']' '[' expression ':' expression ']'
   40         | '[' expression . ':' expression ']' vSYMBOL_ID '=' primary
  111 expression: expression . '^' expression
  112           | expression . '*' expression
  113           | expression . '/' expression
  114           | expression . '%' expression
  115           | expression . '+' expression
  116           | expression . '-' expression
  117           | expression . '&' expression
  118           | expression . '|' expression
  119           | expression . voNAND expression
  120           | expression . voNOR expression
  121           | expression . voXNOR expression
  122           | expression . '<' expression
  123           | expression . '>' expression
  124           | expression . voSRIGHT expression
  125           | expression . voSLEFT expression
  126           | expression . voEQUAL expression
  127           | expression . voNOTEQUAL expression
  128           | expression . voLTE expression
  129           | expression . voGTE expression
  130           | expression . voCASEEQUAL expression
  131           | expression . voCASENOTEQUAL expression
  132           | expression . voOROR expression
  133           | expression . voANDAND expression
  134           | expression . '?' expression ':' expression

    voANDAND        shift, and go to state 90
    voOROR          shift, and go to state 91
    voLTE           shift, and go to state 92
    voGTE           shift, and go to state 93
    voSLEFT         shift, and go to state 94
    voSRIGHT        shift, and go to state 95
    voEQUAL         shift, and go to state 96
    voNOTEQUAL      shift, and go to state 97
    voCASEEQUAL     shift, and go to state 98
    voCASENOTEQUAL  shift, and go to state 99
    voXNOR          shift, and go to state 100
    voNAND          shift, and go to state 101
    voNOR           shift, and go to state 102
    '?'             shift, and go to state 103
    ':'             shift, and go to state 104
    '|'             shift, and go to state 105
    '^'             shift, and go to state 106
    '&'             shift, and go to state 107
    '<'             shift, and go to state 108
    '>'             shift, and go to state 109
    '+'             shift, and go to state 110
    '-'             shift, and go to state 111
    '*'             shift, and go to state 112
    '/'             shift, and go to state 113
    '%'             shift, and go to state 114


state 36

  100 expression: primary .

    $default  reduce using rule 100 (expression)


state 37

    7 module: vMODULE vSYMBOL_ID '(' variable_list ')' . ';' list_of_module_items vENDMODULE

    ';'  shift, and go to state 115


state 38

    8 module: vMODULE vSYMBOL_ID '(' variable_list ',' . ')' ';' list_of_module_items vENDMODULE
   34 variable_list: variable_list ',' . variable

    vSYMBOL_ID  shift, and go to state 14
    ')'         shift, and go to state 116
    '['         shift, and go to state 16

    variable  go to state 117


state 39

  145 primary: '{' . expression_list '}'

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    voXNOR      shift, and go to state 23
    voNAND      shift, and go to state 24
    voNOR       shift, and go to state 25
    '|'         shift, and go to state 26
    '^'         shift, and go to state 27
    '&'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '~'         shift, and go to state 33
    '!'         shift, and go to state 34

    expression       go to state 118
    primary          go to state 36
    expression_list  go to state 87


state 40

   41 variable: vSYMBOL_ID '=' primary .

    $default  reduce using rule 41 (variable)


state 41

   54 module_instantiation: vSYMBOL_ID . module_instance

    vSYMBOL_ID  shift, and go to state 119
    '#'         shift, and go to state 120

    module_instance  go to state 121


state 42

   67 always: vALWAYS . delay_control statement

    '@'  shift, and go to state 122

    delay_control  go to state 123


state 43

   43 gate_declaration: vAND . gate_instance ';'

    vSYMBOL_ID  shift, and go to state 124
    '('         shift, and go to state 125

    gate_instance  go to state 126


state 44

   42 continuous_assign: vASSIGN . blocking_assignment ';'

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    '{'         shift, and go to state 39

    blocking_assignment  go to state 127
    primary              go to state 128


state 45

   68 gen_block: vGENERATE . stmt_list vENDGENERATE

    vSYMBOL_ID  shift, and go to state 21
    vNUMBER_ID  shift, and go to state 22
    vGENERATE   shift, and go to state 129
    vBEGIN      shift, and go to state 130
    vCASE       shift, and go to state 131
    vIF         shift, and go to state 132
    vFOR        shift, and go to state 133
    '{'         shift, and go to state 39
    ';'         shift, and go to state 134

    statement                go to state 135
    blocking_assignment      go to state 136
    non_blocking_assignment  go to state 137
    seq_block                go to state 138
    stmt_list                go to state 139
    primary                  go to state 140


state 46

   27 inout_declaration: vINOUT . variable_list ';'

    vSYMBOL_ID  shift, and go to state 14
    '['         shift, and go to state 16

    variable_list  go to state 141
    variable       go to state 18


state 47

   23 input_declaration: vINPUT . variable_list ';'

    vSYMBOL_ID  shift, and go to state 14
    '['         shift, and go to state 16

    variable_list  go to state 142
    variable       go to state 18


state 48

   24 input_declaration: vINPUT_SIGNED . variable_list ';'

    vSYMBOL_ID  shift, and go to state 14
    '['         shift, and go to state 16

    variable_list  go to state 143
    variable       go to state 18


state 49

   44 gate_declaration: vNAND . gate_instance ';'

    vSYMBOL_ID  shift, and go to state 124
    '('         shift, and go to state 125

    gate_instance  go to state 144


state 50

   45 gate_declaration: vNOR . gate_instance ';'

    vSYMBOL_ID  shift, and go to state 124
    '('         shift, and go to state 125

    gate_instance  go to state 145


state 51

   46 gate_declaration: vNOT . gate_instance ';'

    vSYMBOL_ID  shift, and go to state 124
    '('         shift, and go to state 125

    gate_instance  go to state 146


state 52

   47 gate_declaration: vOR . gate_instance ';'

    vSYMBOL_ID  shift, and go to state 124
    '('         shift, and go to state 125

    gate_instance  go to state 147


state 53

   25 output_declaration: vOUTPUT . variable_list ';'

    vSYMBOL_ID  shift, and go to state 14
    '['         shift, and go to state 16

    variable_list  go to state 148
    variable       go to state 18


state 54

   22 parameter_declaration: vPARAMETER . variable_list ';'

    vSYMBOL_ID  shift, and go to state 14
    '['         shift, and go to state 16

    variable_list  go to state 149
    variable       go to state 18


state 55

   29 net_declaration: vREG . variable_list ';'

    vSYMBOL_ID  shift, and go to state 14
    '['         shift, and go to state 16

    variable_list  go to state 150
    variable       go to state 18


state 56

   26 output_declaration: vOUTPUT_REG . variable_list ';'

    vSYMBOL_ID  shift, and go to state 14
    '['         shift, and go to state 16

    variable_list  go to state 151
    variable       go to state 18


state 57

   28 net_declaration: vWIRE . variable_list ';'

    vSYMBOL_ID  shift, and go to state 14
    '['         shift, and go to state 16

    variable_list  go to state 152
    variable       go to state 18


state 58
